@@ -2,6 +2,12 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Sun Apr 10 16:40:00 CET 2000
+sms:
+* some changes to fidoconfig.h and affected files needed to automatically
+  convert fidoconfig.h to fidoconf.pas with h2pas
+
+----- cvs ci ------
 Sun Apr  9 22:41:43 NOVST 2000
 max:
 * add e_readCheck & e_writeCheck
